@@ -4,12 +4,14 @@ Priority: optional
 Maintainer: Jelmer Vernooij <jelmer@debian.org>
 Uploaders: Christian Perrier <bubulle@debian.org>
 Homepage: http://talloc.samba.org/
-Build-Depends: debhelper (>= 7), docbook-xml, docbook-xsl, xsltproc, libpopt-dev, swig, python (>= 2.6.6-3), python-dev (>= 2.6.6-3)
+Build-Depends: debhelper (>= 8.1.3), docbook-xml, docbook-xsl, xsltproc, libpopt-dev, swig, python-all (>= 2.6.6-3), python-all-dev (>= 2.6.6-3)
 Standards-Version: 3.9.1
 Vcs-Bzr: http://bzr.debian.org/pkg-samba/talloc/unstable
-X-Python-Version: >= 2.4
+X-Python-Version: 2.7
 
 Package: libtalloc2
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Section: libs
@@ -18,6 +20,7 @@ Description: hierarchical pool based memory allocator
  reference counting to determine when memory should be freed.
 
 Package: libtalloc-dev
+Pre-Depends: ${misc:Pre-Depends}
 Section: libdevel
 Depends: libtalloc2 (=${binary:Version}), ${misc:Depends}, pkg-config
 Architecture: any
@@ -28,6 +31,7 @@ Description: hierarchical pool based memory allocator - development files
  This package contains the development files.
 
 Package: python-talloc
+Pre-Depends: ${misc:Pre-Depends}
 Architecture: any
 Section: python
 Provides: ${python:Provides}
@@ -39,7 +43,8 @@ Description: hierarchical pool based memory allocator - Python bindings
  This package contains the Python bindings.
 
 Package: python-talloc-dev
-Architecture: all
+Architecture: any
+Pre-Depends: ${misc:Pre-Depends}
 Section: libdevel
 Depends: python-talloc (>= ${source:Version}), ${misc:Depends}, pkg-config
 Description: talloc Python bindings - development files
