@@ -1,6 +1,6 @@
-usr/lib/libtalloc.a
-usr/lib/libtalloc.so
+usr/lib/*/libtalloc.a
+usr/lib/*/libtalloc.so
 usr/share/man/man3/talloc.3
-usr/lib/pkgconfig/talloc.pc
+usr/lib/*/pkgconfig/talloc.pc
 usr/include/talloc.h
 usr/share/swig*
