@@ -1,1 +1,1 @@
-usr/lib/libtalloc.so.*
+usr/lib/*/libtalloc.so.*
