@@ -1,3 +1,3 @@
-usr/lib/pkgconfig/pytalloc-util.pc
 usr/include/pytalloc.h
-usr/lib/libpytalloc-util.so
+usr/lib/*/pkgconfig/pytalloc-util.pc
+usr/lib/*/libpytalloc-util.so
