@@ -1,2 +1,2 @@
 usr/lib/python*/*-packages/talloc.so
-usr/lib/libpytalloc-util.so.*
+usr/lib/*/libpytalloc-util.so.*
