@@ -1,8 +1,9 @@
 talloc (2.0.5-2) UNRELEASED; urgency=low
 
   * Switch to dh_python2.
+  * Add multi-arch support.
 
- -- Jelmer Vernooij <jelmer@debian.org>  Mon, 07 Mar 2011 03:31:11 +0100
+ -- Jelmer Vernooij <jelmer@debian.org>  Tue, 26 Jul 2011 17:50:44 +0200
 
 talloc (2.0.5-1) unstable; urgency=low
 
